--- a/views/header.ejs
+++ b/views/header.ejs
@@ -7,6 +7,7 @@
     <title><% if(locals.title) { %> <%= title %> <% } %></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="/stylesheets/bulma.min.css" />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body></body>
 </html>
