--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
             <div class="column is-clipped" style="white-space: nowrap">
               <p><strong>Address: </strong><%= interface.address %></p>
               <p><strong>Port: </strong><%= interface.port %></p>
-              <p><strong>Public Key: </strong><%= interface.publickey %></p>
+              <p><strong>Public Key: </strong><%= interface.publicKey %></p>
               <a class="button is-small mt-3" href="/interface/edit/<%= interface.name %>">Edit</a>
             </div>
           </div>
