--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 
         <div class="box">
           <div class="columns">
-            <div class="column is-2 has-text-centered <%= interface.enable === true ? 'enabled-interface' : 'disabled-interface' %>">
+            <div class="column is-2 has-text-centered <%= interface.active === true ? 'enabled-interface' : 'disabled-interface' %>">
               <p class="m-5"><span class="material-icons">link</span></p>
               <strong><%= interface.name %></strong>
             </div>
@@ -20,7 +20,11 @@
             </div>
             <div class="column is-2">
               <a class="button is-small my-1 is-fullwidth" href="/interface/edit/<%= interface.name %>">Edit</a>
+              <% if(interface.active===true) { %>
+              <a class="button is-small my-1 is-fullwidth" href="/interface/deactivate/<%= interface.name %>">Deactivate</a>
+              <% } else { %>
               <a class="button is-small my-1 is-fullwidth" href="/interface/activate/<%= interface.name %>">Activate</a>
+              <% } %>
               <a class="button is-small my-1 is-fullwidth delete-interface" href="/interface/delete/<%= interface.name %>">Delete</a>
               <a class="button is-small my-1 is-fullwidth" href="/peer/add/<%= interface.name %>">Add Peer</a>
             </div>
