--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,9 @@
         <div class="box">
           <div class="columns">
             <div class="column is-2 has-text-centered <%= interface.active === true ? 'enabled-interface' : 'disabled-interface' %>">
-              <p class="m-5"><span class="material-icons">link</span></p>
+              <p class="m-5"><span class="material-icons">
+                <%= interface.active === true ? 'link' : 'link_off' %>
+              </span></p>
               <strong><%= interface.name %></strong>
             </div>
             <div class="column is-clipped" style="white-space: nowrap">
