fix bug, disable active interface before remove

--- a/views/changeInterfaceStatus.ejs
+++ b/views/changeInterfaceStatus.ejs
@@ -1,7 +1,9 @@
 <%- include('header'); -%> <%- include('navbar'); -%>
 
 <section class="section">
-  <pre>Request for <%= requestFor %> <%= interfaceName %>:<br><br>result:<br><%= result %><br><br>redirecting to homepage...</pre>
+  <div class="container">
+    <pre>Request for <%= requestFor %> <%= interfaceName %>:<br><br>result:<br><%= result %><br><br>redirecting to homepage...</pre>
+  </div>
 </section>
 <script>
   (() => {
