--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -9,7 +9,7 @@
     </div>
     <div id="navbarBasicExample" class="navbar-menu">
       <div class="navbar-start">
-        <a class="navbar-item" href="/">Home</a>
+        <a class="navbar-item" href="/interface">Home</a>
 
         <div class="navbar-item has-dropdown is-hoverable">
           <a class="navbar-link">Add Interface</a>
@@ -19,6 +19,8 @@
             <a class="navbar-item" href="/interface/import">From File</a>
           </div>
         </div>
+
+        <a class="navbar-item" href="/interface/export">Export Interface</a>
       </div>
       <div class="navbar-end">
         <div class="navbar-item has-dropdown is-hoverable">
